# t218

./: .gitignore  GEMINI.md  README.md  REPO_NAME  aichat_sf20_info.txt  coherence_report.md  pyproject.toml
conductor/: architecture.md  index.md  product-guidelines.md  product.md  tech-stack.md  tracks.md  workflow.md
docs/: api_guide.md  ethical_compliance.kl  operational_rules.kl  personas.kl  playbook.kl  research_missing_docs.kl  strategy_blueprints.kl  testing.md
output/: ocs_podcast_script.md  ocs_simulation.html
src/api/: engine.py  (+1 more)
tasks/: 001_sf20_transformation.kl  001_sf20_transformation_adaptation.kl  001_sf20_transformation_code.kl  001_sf20_transformation_decision.kl  001_sf20_transformation_edge_cases.kl  001_sf20_transformation_ethics.kl  001_sf20_transformation_exec.kl  001_sf20_transformation_final.kl  001_sf20_transformation_formal.kl  001_sf20_transformation_logic.kl  001_sf20_transformation_podcast.kl  001_sf20_transformation_prompt.kl  001_sf20_transformation_ptas.kl  001_sf20_transformation_roadmap.kl  001_sf20_transformation_rules.kl  001_sf20_transformation_security.kl  001_sf20_transformation_spec.kl  001_sf20_transformation_status.kl  001_sf20_transformation_tas.kl  001_sf20_transformation_unified.kl  001_sf20_transformation_user_review.kl  001_sf20_transformation_visual.kl  002_ocs_simulation.html  002_ocs_simulation.kl  003_ocs_swarm_init.kl  004_ocs_integrated_swarm.kl  005_check_repository_coherence.kl  006_mistral_integration.kl
tests/: reproduction_script.py  test_api.py  verify_mistral_flow.py  verify_swarm.py  verify_ws.py
(+11 files in other folders)
