[project]
name = "ocs-node"
version = "0.1.0"
description = "OCS Node: SF20 Transformation Engine"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "pydantic>=2.7.0",
    "rich>=13.7.0",
    "httpx>=0.27.0",
    "jinja2>=3.1.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
